crates/apollo-compiler/test_data/diagnostics/0122_conditional_subscriptions_with_named_fragment.txt
Error: subscription `ConditionalInlineSub` can not specify @skip or @include on root fields
   ╭─[ 0122_conditional_subscriptions_with_named_fragment.graphql:2:23 ]
   │
 2 │     ...mySubscription @include(if: $condition)
   │                       ────────────┬───────────  
   │                                   ╰───────────── conditional directive used here
───╯

